Changed code in BbIntializer and StudentController also added new models

--- a/ContosoUniversityTARpe21/Views/Students/Create.cshtml
+++ b/ContosoUniversityTARpe21/Views/Students/Create.cshtml
@@ -43,6 +43,6 @@
 
 @section scripts {
     @{
-        await Html.RenderPartialAsync("_ValidationScripts");
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
