--- a/ContosoUniversityTARpe21/Views/Home/Index.cshtml
+++ b/ContosoUniversityTARpe21/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     </div>
 
     <div class="col-md-4">
-        <h2>teine heading</h2>
+        <h2>Drizzy</h2>
         <p>
             Ma ei ole seksuaalselt vägistanud.
         </p>
