fixed the instructor

--- a/ContosoUniversityTARpe21/Views/Home/Index.cshtml
+++ b/ContosoUniversityTARpe21/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     <div class="col-md-4">
         <h2>Drizzy</h2>
         <p>
-            Ma ei ole seksuaalselt vägistanud.
+            Selja valu tootja.
         </p>
         <img src="~/img/drizzy.jpg" alt="back breaker">
 
