--- a/ContosoUniversityTARpe21/Views/Instructors/Details.cshtml
+++ b/ContosoUniversityTARpe21/Views/Instructors/Details.cshtml
@@ -6,31 +6,64 @@
 
 <h1>Details</h1>
 
+<h4>Instructor</h4>
 <div>
     <h4>Instructor</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.LastName)
         </dt>
-        <dd class = "col-sm-10">
+        <dt class="col-sm-10">
             @Html.DisplayFor(model => model.LastName)
-        </dd>
-        <dt class = "col-sm-2">
+        </dt>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FirstMidName)
         </dt>
-        <dd class = "col-sm-10">
+        <dt class="col-sm-10">
             @Html.DisplayFor(model => model.FirstMidName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HireDate)
+        <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.HireDate)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HireDate)
-        </dd>
+        <dt class="col-sm-10">
+                @Html.DisplayFor(model => model.HireDate)
+        </dt>
+        <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.OfficeAssignment)
+        </dt>
+            @{
+                if (Model.OfficeAssignment != null)
+                {
+                <dt class="col-sm-10">
+                        @Html.DisplayFor(model => model.OfficeAssignment.Location)
+                </dt>
+                }
+            }
+        <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.CourseAssignments)
+        </dt>
+        <dt>
+                @{
+                    if (Model.CourseAssignments != null)
+                    {
+                        foreach (var item in Model.CourseAssignments)
+                        {
+                        <td>
+                                @Html.DisplayFor(model => item.Course.CourseID)
+                        </td>
+                        <td>
+                                @Html.DisplayFor(model => item.Course)
+                        </td>
+
+                        }
+                    }
+
+                }
+        </dt>
+
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a>
     <a asp-action="Index">Back to List</a>
 </div>
