--- a/ContosoUniversityTARpe21/Views/Instructors/Index.cshtml
+++ b/ContosoUniversityTARpe21/Views/Instructors/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ContosoUniversityTARpe21.Models.InstructorIndexData
+
 @{
     ViewData["Title"] = "Courses";
 }
@@ -14,6 +15,7 @@
             <th>First Name</th>
             <th>Hire Date</th>
             <th>Office</th>
+            <th>Courses</th>
             <th></th>
         </tr>
     </thead>
@@ -67,7 +69,6 @@
         <tr>
             <th></th>
             <th>Number</th>
-            <th>Title</th>
             <th>Department</th>
         </tr>
         @foreach (var item in Model.Courses)
@@ -91,18 +92,30 @@
         }
     </table>
 }
-@if (Model.Enrollments != null)
+@if (Model.Enrollments != null && Model.Enrollments.Any())
 {
-    <h3>Students enrolled in the selected course:</h3>
-    <table class="table">
-        <tr>Name</tr>
-        <tr>Grade</tr>
-        @foreach (var item in Model.Enrollments)
-        {
+    <h3 class="mt-4">Students enrolled in the selected course:</h3>
+    <table class="table table-hover">
+        <thead class="table-light">
             <tr>
-                <td>@item.Student.FullName</td>
-                <td>@Html.DisplayFor(modelItem => item.Grade)</td>
+                <th>Name</th>
+                <th>Grade</th>
             </tr>
-        }
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Enrollments)
+            {
+                <tr>
+                    <td>@Html.DisplayFor(model => item.Student.FullName)</td>
+                    <td>@Html.DisplayFor(model => item.Grade)</td>
+                </tr>
+            }
+        </tbody>
     </table>
+}
+else
+{
+    <div class="alert alert-info" role="alert">
+        <strong>No students enrolled</strong> in the selected course.
+    </div>
 }
