--- a/ContosoUniversityTARpe21/Views/Students/Create.cshtml
+++ b/ContosoUniversityTARpe21/Views/Students/Create.cshtml
@@ -1,43 +1,84 @@
 ﻿@model ContosoUniversityTARpe21.Models.Student
-
 @{
     ViewData["Title"] = "Create";
+    var courses = ViewData["Courses"] as List<ContosoUniversityTARpe21.Models.AssignedCourseData>;
 }
 
 <h1>Create</h1>
 
-<h4>Student</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FirstMidName" class="control-label"></label>
-                <input asp-for="FirstMidName" class="form-control" />
-                <span asp-validation-for="FirstMidName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EnrollmentDate" class="control-label"></label>
-                <input asp-for="EnrollmentDate" class="form-control" />
-                <span asp-validation-for="EnrollmentDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h4>Student</h4>
+            <hr class="mb-4">
+            <form asp-action="Create" asp-controller="Students">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                
+                <div class="form-group">
+                    <label asp-for="LastName" class="control-label"></label>
+                    <input asp-for="LastName" class="form-control" />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FirstMidName" class="control-label"></label>
+                    <input asp-for="FirstMidName" class="form-control" />
+                    <span asp-validation-for="FirstMidName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="EnrollmentDate" class="control-label"></label>
+                    <input asp-for="EnrollmentDate" class="form-control" />
+                    <span asp-validation-for="EnrollmentDate" class="text-danger"></span>
+                </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+                <div class="form-group">
+                    <label>Courses</label>
+                    <div class="table-responsive">
+                        <table class="table table-bordered">
+                            <tbody>
+                                @for (int i = 0; i < courses.Count; i++)
+                                {
+                                    if (i % 3 == 0)
+                                    {
+                                        if (i != 0)
+                                        {
+                                            @:</tr>
+                                        }
+                                        @:<tr>
+                                    }
+                                    
+                                    <td>
+                                        <div class="form-check">
+                                            <input type="checkbox" class="form-check-input" name="selectedCourses" value="@courses[i].CourseID" />
+                                            <label class="form-check-label">@courses[i].Title</label>
+                                        </div>
+                                    </td>
+
+                                    if (i == courses.Count - 1)
+                                    {
+                                        @:</tr>
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+
+            </form>
+        </div>
+    </div>
+
+    <div>
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    </div>
+
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
