--- a/ContosoUniversityTARpe21/Views/Instructors/Edit.cshtml
+++ b/ContosoUniversityTARpe21/Views/Instructors/Edit.cshtml
@@ -1,67 +1,85 @@
 ﻿@model ContosoUniversityTARpe21.Models.Instructor
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
+    var courses = ViewData["Courses"] as List<ContosoUniversityTARpe21.Models.AssignedCourseData>;
 }
 
-<h1>Edit</h1>
+<h1>Create a new teacher</h1>
+
 <h4>Instructor</h4>
-<hr/>
+<hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ID"/>
-            <div class="form-group">
-                <label asp-for="FirstMidName" class="control-label"></label>
-                <input asp-for="FirstMidName" class="form-control" />
-                <span asp-validation-for="FirstMidName" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <label asp-for="LastName" class="control-label"></label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="FirstMidName" class="control-label"></label>
+                <input asp-for="FirstMidName" class="form-control" />
+                <span asp-validation-for="FirstMidName" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="HireDate" class="control-label"></label>
                 <input asp-for="HireDate" class="form-control" />
                 <span asp-validation-for="HireDate" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="OfficeAssignment.Location" class="control-label"></label>
                 <input asp-for="OfficeAssignment.Location" class="form-control" />
                 <span asp-validation-for="OfficeAssignment.Location" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <table>
-                    <tr>
-                        @{
-                            int cnt = 0;
-                            List<ContosoUniversityTARpe21.Models.AssignedCourseData> courses = ViewBag.Courses;
 
-                            foreach (var course in courses)
-                            {
-                                if (cnt++ %3 == 0)
-                                {
-                                    @:</tr><tr>
-                                }
-                                @:<td>
-                                <input type="checkbox"
-                                name="selectedCourses"
-                                value="@course.CourseID"
-                                @(Html.Raw(course.Assigned ? "checked=\"checked\"" : ""))/>
-                                @course.CourseID @: course.Title
-                                @:</td>
-                            }
-                        }
-                    </tr>
-                </table>
-            </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary"/>
+                <label>Courses</label>
+                <div class="table-responsive">
+                    <table class="table table-bordered">
+                        <tbody>
+                            @{
+                                int cnt = 0;
+                                foreach (var course in courses)
+                                {
+                                    if (cnt++ % 3 == 0)
+                                    {
+                                        if (cnt != 1)
+                                        {
+                                            @:</tr>
+                                        }
+                                        @:<tr>
+                                    }
+
+                                    @:<td>
+                                        <div class="form-check">
+                                            <input type="checkbox" class="form-check-input" name="selectedCourses" value="@course.CourseID" @(Html.Raw(course.Assigned ? "checked=\"checked\"" : "")) />
+                                            <label class="form-check-label">@course.Title</label>
+                                        </div>
+                                    @:</td>
+
+                                    if (cnt == courses.Count)
+                                    {
+                                        @:</tr>
+                                    }
+                                }
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
+
 <div>
     <a asp-action="Index">Back to List</a>
-</div
+</div>
