--- a/ContosoUniversityTARpe21/Views/Shared/_Layout.cshtml
+++ b/ContosoUniversityTARpe21/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Contoso University</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/ContosoUniversityTARpe21.styles.css" asp-append-version="true" />
 </head>
 <body>
